--- a/sass.html
+++ b/sass.html
@@ -25,7 +25,7 @@
       </div>
   </div>
 
-  <form class="form">
+  <form class="form" id="myform">
    <input type="text" class="inp1">
    <input type="text" class="inp2">
   </form>
