--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 <br>
 <br>
 <br>
-
+<div class="container">
 
 <div class="posrel">
     <input type="text" class="myinput">
@@ -151,7 +151,7 @@
           <a href="">სრულად ნახვა</a>
       </div>
    </div>
-
+</div>
 
 </body>
 </html>
