--- a/js.html
+++ b/js.html
@@ -27,6 +27,11 @@
         ამასთან, Pfizer-ის აღმასრულებელმა დირექტორმა ცოტა ხნის წინ დაადასტურა, რომ ომიკრონის მიმართ სპეციფიკური ვაქცინა მზად იქნება მარტისთვის. ამ ყველაფრის ფონზე, გეიტსს მიაჩნია, რომ ომიკრონი შეიძლება პანდემიის ბოლო გაჩერება იყოს
     </div>
 
+
+    <div id="myimg">
+        
+    </div>
+
     <script  src="js/mine.js"></script>
 </body>
 </html>
