--- a/js.html
+++ b/js.html
@@ -29,8 +29,14 @@
 
 
     <div id="myimg">
+
+    </div>
+
+    <div id="fundiv">
         
     </div>
+
+    <div id="img"></div>
 
     <script  src="js/mine.js"></script>
 </body>
