--- a/js.html
+++ b/js.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <style>
-
+ img{
+     max-width: 100%;
+ }
     .highl{
         background-color: greenyellow;
         color: #fff;
@@ -37,6 +41,31 @@
     </div>
 
     <div id="img"></div>
+
+    <div class="container">
+
+        <div class="row m-5">
+           <form action="" >
+
+            <div class="row">
+               <div class="col-lg-4">
+                    <input type="text" class="form-control" id="text">
+               </div>
+               <div class="col-lg-4">
+                <input type="date"  class="form-control" id="date">
+           </div> 
+           <div class="col-lg-4">
+             <button class="btn btn-info searched" type="button">ძებნა</button>
+           </div> 
+            </div>
+             
+           </form>
+        </div>
+        
+        <div class="row" id="load">
+
+        </div>
+    </div>
 
     <script  src="js/mine.js"></script>
 </body>
