--- a/js.html
+++ b/js.html
@@ -67,6 +67,17 @@
         </div>
     </div>
 
+    <div id="leng">
+        
+    </div>
+
+  <div class="container">
+        <div class="row" id="loads">
+
+    </div>
+  
+  </div>
+
     <script  src="js/mine.js"></script>
 </body>
 </html>
