--- a/dom.html
+++ b/dom.html
@@ -18,6 +18,13 @@
     
 
     <button class="btn btnremove" onclick="remiven()">ივენთვის წაშლა</button>
+    
+    <div class="calcs p-3 bg-danger">
+        <div class="decr">-</div>
+        <div class="out">1</div>
+        <div class="incr">+</div>
+    </div>
+
 
     <script src="js/dom.js"></script>
 </body>
