--- a/dom.html
+++ b/dom.html
@@ -9,6 +9,20 @@
 </head>
 <body>
 
+    <button class="sidebtn">
+        <span></span>
+        <span></span>
+        <span></span>
+    </button>
+
+    <div class="sidebar">
+        <a href="">მენიუ</a>
+        <a href="">მენიუ</a>
+        <a href="">მენიუ</a>
+        <a href="">მენიუ</a>
+        <a href="">მენიუ</a>
+    </div>
+
     <p class="ptag" >კონტენტი</p>
     <p class="ptag" >კონტენტი</p>
     <p class="ptag"  id="mypid">კონტენტი</p>
