--- a/dom.html
+++ b/dom.html
@@ -40,6 +40,11 @@
     </div>
 
 
+     <form action="" class="attr">
+        <input type="text" name="" id=""  >
+        <button class="attrbtn">გაგზავნა</button>
+     </form>
+
     <script src="js/dom.js"></script>
 </body>
 </html>
