--- a/dom.html
+++ b/dom.html
@@ -41,7 +41,11 @@
 
 
      <form action="" class="attr">
-        <input type="text" name="" id=""  >
+
+        <div id="msg">პაროლი ან ელ:ფოსტა არასწორია</div>
+
+        <input type="text" name="user" id="" placeholder="ელ:ფოსტა">
+        <input type="password" name="pass" id="" placeholder="პაროლი" >
         <button class="attrbtn">გაგზავნა</button>
      </form>
 
