--- a/dom.html
+++ b/dom.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/dom.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
 
-    <button class="sidebtn">
+    <!-- <button class="sidebtn">
         <span></span>
         <span></span>
         <span></span>
@@ -46,8 +48,66 @@
 
         <input type="text" name="user" id="" placeholder="ელ:ფოსტა">
         <input type="password" name="pass" id="" placeholder="პაროლი" >
-        <button class="attrbtn">გაგზავნა</button>
+        <button class="attrbtn"> &#127754; გაგზავნა</button>
      </form>
+     <p>ვიდეოს და რეზიუმეს სანახავად გადადით <a href="" target="blank">ბმულზე</a> </p> -->
+
+     <!-- <div class="col-lg-5 mx-auto shadow mt-5">
+         <div class="d-flex myforms">
+
+            <form action="" class="reg    p-4">
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                  </div>
+                  <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                  </div>
+                  <div class="mb-3">
+                    <button class="btn-danger btn">რეგისტრაცია</button>
+                        </div>
+              </form>
+
+          <form action="" class="login   p-4"> 
+            <div class="mb-3 ">
+                <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+              </div>
+              <div class="mb-3">
+                <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+              </div>
+              <div class="mb-3">
+            <button class="btn-success btn">შესვლა</button>
+                </div>
+
+          </form>
+ 
+
+          <div class="overley">
+              <h1 class="w-100 mb-3">გამარჯობა !</h1>
+              <button class="btn w-100 d-block border-success rounded-fill">რეგისტრაცია</button>
+          </div>
+
+         </div>
+     </div> -->
+
+     <form action=""   class="mx-auto col-lg-5 shadow bg-white ronded p-4">
+
+        <div class="flexss">
+
+            <input type="text" id="tagvalue" autofocus>
+        </div>
+
+        <!-- <div id="inputout">
+
+        </div> -->
+
+        <!-- <input type="text"> -->
+  <!-- <button type="button" class="btn btn-danger">ახალი ინფუთი</button> -->
+     </form>
+
 
     <script src="js/dom.js"></script>
 </body>
