--- a/dom.html
+++ b/dom.html
@@ -108,7 +108,22 @@
   <!-- <button type="button" class="btn btn-danger">ახალი ინფუთი</button> -->
      </form>
 
+  <div class="container"> 
+     <div class="col-lg-4 cars">
+         <p class="active">კონტენტი1</p>
+         <p>კონტენტი2</p>
+         <p >კონტენტი3</p>
+         <p  >კონტენტი4</p>
+         <p>კონტენტი5</p>
+         <p>კონტენტი6</p>
+         <p>კონტენტი7</p>
+      </div>
+      <div class="col-lg-4 d-flex">
+      <button class="btn d-inline-block btn-danger">წინა</button>
+      <button class="btn d-inline-block btn-success">შემდეგი</button>     
+      </div>
 
+    </div>
     <script src="js/dom.js"></script>
 </body>
 </html>
