--- a/dom.html
+++ b/dom.html
@@ -107,7 +107,7 @@
         <!-- <input type="text"> -->
   <!-- <button type="button" class="btn btn-danger">ახალი ინფუთი</button> -->
      </form>
-
+<!-- 
   <div class="container"> 
      <div class="col-lg-4 cars">
          <p class="active">კონტენტი1</p>
@@ -123,7 +123,14 @@
       <button class="btn d-inline-block btn-success">შემდეგი</button>     
       </div>
 
+    </div> -->
+
+
+
+    <div class="typing col-lg-4 mx-auto mt-5">
+        <span class="text"> </span>
     </div>
+
     <script src="js/dom.js"></script>
 </body>
 </html>
