--- a/jq.html
+++ b/jq.html
@@ -5,17 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        .box{
-            width: 400px;
-            height: 400px;
-            margin: auto;
-            background-color: black;
-        }
-    </style>
+    <link rel="stylesheet" href="css/jq.css">
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+
 </head>
 <body>
-
+<!-- 
     <div class="box">
 
     </div>
@@ -28,8 +24,44 @@
 <button class="btn show">გამოჩენა</button>
 <button class="btn  toglle">გაქრობა/გამოჩენა</button>
 
-<button class="btn  css">add css</button> 
+<button class="btn  css">add css</button>  -->
+
+<!-- <div class="text">
+    <i class="bi bi-trash-fill"></i>
+
+    <div class="innertext">
+        <h3>Sure?</h3>
+        <button class="tes">yes Delete This File</button>
+    </div>
+
+</div> -->
+
+<!-- <div class="mycontent">
+  <h1>ტექსტი</h1>
+
+  <input type="text" value="" class="form-con" required>
+  <input type="text" value="" class="form-condis">
  
+
+  <button class="checks">გადამოწმება</button>
+
+</div>
+
+<div id="mybox">
+  <button class="checkdem">ზომის გადამოწმება</button>
+</div> -->
+
+<!-- <input type="checkbox" name="ss"  class="chech"    > -->
+
+
+<select name="" id="country">
+   
+</select>
+
+<select name="" id="city">
+    <option value="0" selected disabled>აირჩიეთ ქალაქი</option>
+ 
+</select>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/jq.js"></script>
