--- a/jq.html
+++ b/jq.html
@@ -63,6 +63,39 @@
  
 </select>
 
+<div class="d-flex">
+
+
+    <img src="img/bg.jpg" width="250" alt="">
+    <img src="img/logo.png" width="250" alt="">
+    <img src="img/slider.png" width="250" alt="">
+</div>
+
+<div class="imgoutput">
+    <span>x</span>
+    <img src="" alt="">
+</div>
+
+
+
+
+<div class="parents">
+
+    <div>
+        <input type="text" name="" id="name">
+        <button class="serach">ძებნა</button>
+    </div>
+
+    <p>1</p>
+    <p>2</p>
+    <p>3</p>
+   <p class="child">4</p>  
+    <p>5</p>
+    <p>6</p>
+    <span>7</span>
+    <p>8</p>
+</div>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/jq.js"></script>
 </body>
